  [*] Added ability to execute operations on multiple items in roster
  [*] Notification of request for authorization is now deleted automatically in case of confirmation or removal of authorization from another resource
  [*] Added support for transferring files via SOCKS5 in conferences
  [*] Added animation support in SimpleMessageStyles and notification pop-ups
  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection
  [-] Fixed bug in Digest-MD5 authorization for which was not possible to log on some servers
  [-] When leaving the hidden conferences also closed the conference on non-active tabs
  [-] In the history view could appear duplicates of conversations
  [-] Did not correctly handle changes in the participant's nickname when new nickname is already used by the same participant but from a different resource
  [-] Incorrectly requested history of communication when connected to a server Openfire with plugin Open Archive
  [-] The first message in the chat may not be saved in the local message archive
  [-] Establishing a connection when transferring files could take up too much time
  [-] File transfer could hang up from the cancellation of the transfer by the initiator
  [-] Exchanging of chat state information with contact was disabled after receiving offline stored message from it
  [-] The time of the delayed messages was not defined if it was send by XEP-0203: Delayed Delivery


v1.1.0
------
  [!] Added new plugin for remote controlling
  [+] Added shortcuts support
  [+] Added ability to show tabs at the bottom of the tab windows
  [+] Added support of XEP-0199 - XMPP Ping
  [+] Added maintenance history of visited conferences
  [+] Changes of contact status and entry/exit of participants in conference are stored in the history
  [+] Added support for arbitrary forms of registration when registering an account on the server